validating-admission-policies/pod-security/baseline/restrict-sysctls/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: kernel.shm_next_id
      value: "4"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
    - name: kernel.shm_next_id
      value: "4"
###### Pods - Good
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ip_local_port_range
      value: "31000    60999"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.tcp_syncookies
      value: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
    - name: net.ipv4.ping_group_range
      value: "1   0"
