validating-admission-policies/pod-security/baseline/restrict-sysctls/restrict-sysctls.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-sysctls
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: "!has(object.spec.securityContext) || \
                   !has(object.spec.securityContext.sysctls) || \
                   object.spec.securityContext.sysctls.all(sysctl, !has(sysctl.name) || \
                   sysctl.name == 'kernel.shm_rmid_forced' || \
                   sysctl.name == 'net.ipv4.ip_local_port_range' || \
                   sysctl.name == 'net.ipv4.ip_unprivileged_port_start' || \
                   sysctl.name == 'net.ipv4.tcp_syncookies' || \
                   sysctl.name == 'net.ipv4.ping_group_range')"
      message: "Setting additional sysctls above the allowed type is disallowed. \
                The field spec.securityContext.sysctls must be unset or not use any other names \
                than kernel.shm_rmid_forced, net.ipv4.ip_local_port_range, \
                net.ipv4.ip_unprivileged_port_start, net.ipv4.tcp_syncookies and \
                net.ipv4.ping_group_range."
